--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -184,8 +184,12 @@
                         class="text-error text-left"
                         *ngIf="frmIndividualReceipt.get(col?.name).errors?.contributionDateInvalid"
                       >
-                        Entered date is outside of the report coverage period. Please enter transactions for this
-                        coverage period only.
+                        The date entered falls outside of the report coverage period. Transactions for this report
+                        should fall within {{ cvgStartDate }} and {{ cvgEndDate }} (Coverage Dates of Report). If you
+                        need to add a transaction with a date that falls outside of the coverage period for this report,
+                        you will need to check the memo code box.
+                        <!-- Entered date is outside of the report coverage period. Please enter transactions for this
+                        coverage period only. -->
                       </div>
                     </ng-container>
                   </div>
