--- a/front-end/src/app/forms/form-3x/financial-summary/financial-summary.component.html
+++ b/front-end/src/app/forms/form-3x/financial-summary/financial-summary.component.html
@@ -2,7 +2,7 @@
      <header class="header-content">
         <div class="grid-row">
           <div class="grid-row__col grid-row__col--6">
-            <h1>Financial Summary</h1>
+            <h1>&nbsp;&nbsp;&nbsp;Financial Summary</h1>
           </div>
          <div class="grid-row__col grid-row__col--12 text-right">
             <div class="float-right"   ngbDropdown role="group" aria-label="Action dropdown">
