--- a/front-end/src/app/forms/sched-h5/sched-h5.component.html
+++ b/front-end/src/app/forms/sched-h5/sched-h5.component.html
@@ -21,10 +21,14 @@
     <header>
       <div class="header-content">
         <div class="float-left">
-          <h2>
-            Form 3X
-            <ng-container *ngIf="transactionTypeText"> / {{ transactionTypeText }} </ng-container>
-            <ng-container *ngIf="scheduleAction === editScheduleAction"> / Edit </ng-container>
+          <h2 *ngIf="transactionType === 'ALLOC_H5_RATIO'">
+            Transfers of Levin Funds Received for Allocated Federal Election Activity
+          </h2>
+          <h2 *ngIf="transactionType === 'ALLOC_H5_SUM'">
+            Transfers from Levin Funds for Allocated Federal Election Activity
+          </h2>
+          <h2 *ngIf="transactionType === 'ALLOC_H5_SUM_P'">
+            Total For Breakdown of Transfers Received - Levin Funds
           </h2>
         </div>
         <div class="float-right" ngbDropdown>
@@ -59,22 +63,21 @@
                   <span class="sr-only">Click here for more information</span>
                 </button>
               </label>
-              <select id="" formControlName="account_name" class="form-control"
-                  [ngClass]="
-                    schedH5.get('account_name')?.invalid &&
-                    (schedH5.touched || schedH5.dirty) && isSubmit
-                      ? 'input-field-error'
-                      : ''
-                  " 
-              >                    
+              <select
+                id=""
+                formControlName="account_name"
+                class="form-control"
+                [ngClass]="
+                  schedH5.get('account_name')?.invalid && (schedH5.touched || schedH5.dirty) && isSubmit
+                    ? 'input-field-error'
+                    : ''
+                "
+              >
                 <option value="" selected>Select account name</option>
-                <option
-                  *ngFor="let item of levinAccountsies"                    
-                  [value]="item.levin_account_name"
-                >
+                <option *ngFor="let item of levinAccountsies" [value]="item.levin_account_name">
                   {{ item.levin_account_name }}
-                </option>                  
-            </select>
+                </option>
+              </select>
             </div>
           </div>
           <div class="col col-md-4">
@@ -92,20 +95,26 @@
                     <i class="calendar-icon" aria-hidden="true"></i>
                   </span>
                 </div>
-                <input class="form-control" type="date" [formControlName]="'receipt_date'" [attr.name]="'receipt_date'"
-                  [style.width]="'50%'" [style.height]="'30px'" 
+                <input
+                  class="form-control"
+                  type="date"
+                  [formControlName]="'receipt_date'"
+                  [attr.name]="'receipt_date'"
+                  [style.width]="'50%'"
+                  [style.height]="'30px'"
                   (change)="receiptDateChanged($event.target.value)"
                   [ngClass]="
-                    schedH5.get('receipt_date')?.invalid &&
-                      (schedH5.touched || schedH5.dirty)
+                    schedH5.get('receipt_date')?.invalid && (schedH5.touched || schedH5.dirty)
                       ? 'input-field-error'
                       : ''
-                  " />
+                  "
+                />
               </div>
-              <div class="text-error text-left"
-                *ngIf="receiptDateErr"
-              >
-              The date entered falls outside of the report coverage period. Transactions for this report should fall within {{ cvgStartDate }} and {{ cvgEndDate }} (Coverage Dates of Report). If you need to add a transaction with a date that falls outside of the coverage period for this report, you will need to check the memo code box.
+              <div class="text-error text-left" *ngIf="receiptDateErr">
+                The date entered falls outside of the report coverage period. Transactions for this report should fall
+                within {{ cvgStartDate }} and {{ cvgEndDate }} (Coverage Dates of Report). If you need to add a
+                transaction with a date that falls outside of the coverage period for this report, you will need to
+                check the memo code box.
               </div>
             </div>
           </div>
@@ -124,16 +133,21 @@
                     <i class="dollar-sign-icon" aria-hidden="true"></i>
                   </span>
                 </div>
-                <input class="form-control" type="text" 
-                  [formControlName]="'total_amount_transferred'"                  
-                  [attr.name]="'total_amount_transferred'" [style.width]="'50%'" [style.height]="'30px'" 
-                  [attr.readonly]=true
+                <input
+                  class="form-control"
+                  type="text"
+                  [formControlName]="'total_amount_transferred'"
+                  [attr.name]="'total_amount_transferred'"
+                  [style.width]="'50%'"
+                  [style.height]="'30px'"
+                  [attr.readonly]="true"
                   [ngClass]="
-                      frmIndividualReceipt.get('date')?.invalid &&
-                      (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
+                    frmIndividualReceipt.get('date')?.invalid &&
+                    (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
                       ? 'input-field-error'
                       : ''
-                  " />
+                  "
+                />
               </div>
             </div>
           </div>
@@ -141,8 +155,7 @@
         <div class="row">
           <div class="col col-md-6 col-md-offset-2">
             <div class="form-group">
-              <label for="">
-              </label>
+              <label for=""> </label>
 
               <select id="" formControlName="category" class="form-control">
                 <option value="" selected>Select Category</option>
@@ -155,34 +168,34 @@
         </div>
         <div class="row">
           <div class="col col-md-4">
-            <div class="form-group">                    
+            <div class="form-group">
               <label for="">
                 Amount
-                <button type="button" class="btn btn-info" ngbTooltip="{{ col?.infoText }}"
-                    tooltipClass="form-tooltip">
-                    <i class="info-icon" aria-hidden="true"></i>
-                    <span class="sr-only">Click here for more information</span>
+                <button type="button" class="btn btn-info" ngbTooltip="{{ col?.infoText }}" tooltipClass="form-tooltip">
+                  <i class="info-icon" aria-hidden="true"></i>
+                  <span class="sr-only">Click here for more information</span>
                 </button>
               </label>
               <div class="row input-group">
-                  <div class="input-group-prepend">
-                      <span class="input-group-text" id="filter-max-amount">
-                          <i class="dollar-sign-icon" aria-hidden="true"></i>
-                      </span>
-                  </div>
-                  <input class="form-control" 
+                <div class="input-group-prepend">
+                  <span class="input-group-text" id="filter-max-amount">
+                    <i class="dollar-sign-icon" aria-hidden="true"></i>
+                  </span>
+                </div>
+                <input
+                  class="form-control"
                   type="text"
                   [formControlName]="'transferred_amount'"
                   [attr.name]="'transferred_amount'"
-                  [style.width]="'50%'" 
+                  [style.width]="'50%'"
                   [style.height]="'30px'"
                   [ngClass]="
-                      frmIndividualReceipt.get('date')?.invalid &&
-                      (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
+                    frmIndividualReceipt.get('date')?.invalid &&
+                    (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
                       ? 'input-field-error'
                       : ''
                   "
-                  />
+                />
               </div>
             </div>
           </div>
@@ -190,61 +203,66 @@
       </div>
 
       <div>
-          <ng-container>
-              <table class="table table-striped table-hover table__sortable">
-                <thead>
-                  <tr>
-                    <th [@fadeInOut]>
-                    </th>
-                    <th [@fadeInOut] (click)="changeSortDirection('date')">Date
-                      <i class="fa fa-sort" aria-hidden="false"></i>
-                    </th>
-                    <th [@fadeInOut] (click)="changeSortDirection('transfer_type')">Transfer Type
-                      <i class="fa fa-sort" aria-hidden="false"></i>
-                    </th>
-                    <th [@fadeInOut] (click)="changeSortDirection('account_name')">Account Name
-                      <i class="fa fa-sort" aria-hidden="false"></i>
-                    </th>
-      
-                    <th [@fadeInOut] (click)="changeSortDirection('transfer_amount')">Transfer Amount
-                      <i class="fa fa-sort" aria-hidden="false"></i>
-                    </th>
-                    <!-- <th [@fadeInOut] (click)="changeSortDirection('federal_percent')">Aggregate Amount -->
-                    <!-- <i class="fa fa-sort" aria-hidden="false"></i> -->
-                    <!-- </th> -->
-                  </tr>
-                </thead>
-                <tbody>
-                  <ng-container *ngFor="let report of h5Entries | paginate: h5EntryTableConfig">
-                    <tr>
-                      <td>
-                        <input type="checkbox" (click)="checkForMultiChecked($event)">
-                      </td>                      
-                      <td>{{ report.receipt_date | date: 'MM/dd/yyyy' }}</td>
-                      <td>
-                        <div *ngIf="report.category  == 'voter_id'">Voter ID</div>
-                        <div *ngIf="report.category  == 'voter_registration'">Voter Registration</div>
-                        <div *ngIf="report.category  == 'generic_campaign'">Generic Campaign Activities</div>
-                        <div *ngIf="report.category  == 'gotv'">GOTV</div>                        
-                      </td>
-                      <td>{{ report.account_name }}</td>
-                      <td class="summary_text_amt">{{ report.transferred_amount | currency:'USD':'symbol-narrow':'1.2-2' }}</td>                      
-                    </tr>
-                  </ng-container>
-                </tbody>
-              </table>
-              <hr/>
-              <div class="d-flex justify-content-center">
-                <pagination-controls (pageChange)="entryPageChanged($event)"></pagination-controls>
-              </div>
-            </ng-container>
+        <ng-container>
+          <table class="table table-striped table-hover table__sortable">
+            <thead>
+              <tr>
+                <th [@fadeInOut]></th>
+                <th [@fadeInOut] (click)="changeSortDirection('date')">
+                  Date
+                  <i class="fa fa-sort" aria-hidden="false"></i>
+                </th>
+                <th [@fadeInOut] (click)="changeSortDirection('transfer_type')">
+                  Transfer Type
+                  <i class="fa fa-sort" aria-hidden="false"></i>
+                </th>
+                <th [@fadeInOut] (click)="changeSortDirection('account_name')">
+                  Account Name
+                  <i class="fa fa-sort" aria-hidden="false"></i>
+                </th>
+
+                <th [@fadeInOut] (click)="changeSortDirection('transfer_amount')">
+                  Transfer Amount
+                  <i class="fa fa-sort" aria-hidden="false"></i>
+                </th>
+                <!-- <th [@fadeInOut] (click)="changeSortDirection('federal_percent')">Aggregate Amount -->
+                <!-- <i class="fa fa-sort" aria-hidden="false"></i> -->
+                <!-- </th> -->
+              </tr>
+            </thead>
+            <tbody>
+              <ng-container *ngFor="let report of h5Entries | paginate: h5EntryTableConfig">
+                <tr>
+                  <td>
+                    <input type="checkbox" (click)="checkForMultiChecked($event)" />
+                  </td>
+                  <td>{{ report.receipt_date | date: 'MM/dd/yyyy' }}</td>
+                  <td>
+                    <div *ngIf="report.category == 'voter_id'">Voter ID</div>
+                    <div *ngIf="report.category == 'voter_registration'">Voter Registration</div>
+                    <div *ngIf="report.category == 'generic_campaign'">Generic Campaign Activities</div>
+                    <div *ngIf="report.category == 'gotv'">GOTV</div>
+                  </td>
+                  <td>{{ report.account_name }}</td>
+                  <td class="summary_text_amt">
+                    {{ report.transferred_amount | currency: 'USD':'symbol-narrow':'1.2-2' }}
+                  </td>
+                </tr>
+              </ng-container>
+            </tbody>
+          </table>
+          <hr />
+          <div class="d-flex justify-content-center">
+            <pagination-controls (pageChange)="entryPageChanged($event)"></pagination-controls>
+          </div>
+        </ng-container>
       </div>
 
       <div class="grid-row">
         <div class="grid-row__col grid-row__col--12">
           <div class="forms__btn-container">
             <button class="btn btn-primary btn-right" type="button" (click)="saveAddMore()">
-              Save & Edit
+              Save & Add
             </button>
           </div>
         </div>
@@ -273,19 +291,22 @@
         <table class="table table-striped table-hover table__sortable">
           <thead>
             <tr>
-              <th [@fadeInOut]>
-              </th>
-              <th [@fadeInOut] (click)="changeSortDirection('date')">Date
+              <th [@fadeInOut]></th>
+              <th [@fadeInOut] (click)="changeSortDirection('date')">
+                Date
                 <i class="fa fa-sort" aria-hidden="false"></i>
               </th>
-              <th [@fadeInOut] (click)="changeSortDirection('transfer_type')">Transfer Type
+              <th [@fadeInOut] (click)="changeSortDirection('transfer_type')">
+                Transfer Type
                 <i class="fa fa-sort" aria-hidden="false"></i>
               </th>
-              <th [@fadeInOut] (click)="changeSortDirection('account_name')">Account Name
+              <th [@fadeInOut] (click)="changeSortDirection('account_name')">
+                Account Name
                 <i class="fa fa-sort" aria-hidden="false"></i>
               </th>
 
-              <th [@fadeInOut] (click)="changeSortDirection('transfer_amount')">Transfer Amount
+              <th [@fadeInOut] (click)="changeSortDirection('transfer_amount')">
+                Transfer Amount
                 <i class="fa fa-sort" aria-hidden="false"></i>
               </th>
               <!-- <th [@fadeInOut] (click)="changeSortDirection('federal_percent')">Aggregate Amount -->
@@ -297,7 +318,7 @@
             <ng-container *ngFor="let report of h5Sum | paginate: h5TableConfig">
               <tr>
                 <td>
-                  <input type="checkbox" (click)="checkForMultiChecked($event)">
+                  <input type="checkbox" (click)="checkForMultiChecked($event)" />
                 </td>
                 <!-- <td> -->
                 <!-- <div *ngIf="report.event_type == 'fundraising'">Fundraising</div> -->
@@ -307,26 +328,21 @@
                 <td>{{ report.receipt_date | date: 'MM/dd/yyyy' }}</td>
                 <td>{{ report.transfer_type }}</td>
                 <td>{{ report.account_name }}</td>
-                <td class="summary_text_amt">{{ report.transfer_amount | currency:'USD':'symbol-narrow':'1.2-2' }}</td>
+                <td class="summary_text_amt">{{ report.transfer_amount | currency: 'USD':'symbol-narrow':'1.2-2' }}</td>
                 <!-- <td class="summary_text_amt">{{ report.aggregateAmount | currency:'USD':'symbol-narrow':'1.2-2' }}</td> -->
 
                 <td class="bulk_action">
                   <div [@fadeInOut] class="btn-group" ngbDropdown role="group" aria-label="Action dropdown">
-
                     <button class="btn btn-sm btn-primary" ngbDropdownToggle>
                       <i class="fas fa-ellipsis-h"></i>
                     </button>
 
                     <div id="forms__trx-dropdown-action1" ngbDropdownToggle class="dropdown-menu" ngbDropdownMenu>
-                      <button class="dropdown-item" (click)="viewditH2(report)">
-                        <i class="fas fa-eye"></i> View
-                      </button>
+                      <button class="dropdown-item" (click)="viewditH2(report)"><i class="fas fa-eye"></i> View</button>
                       <button class="dropdown-item" (click)="printH2(report)">
                         <i class="fas fa-print"></i> Print
                       </button>
-                      <button class="dropdown-item" (click)="editH2(report)">
-                        <i class="fas fa-edit"></i> Edit
-                      </button>
+                      <button class="dropdown-item" (click)="editH2(report)"><i class="fas fa-edit"></i> Edit</button>
                       <button class="dropdown-item" (click)="trashH2(report)">
                         <i class="fas fa-trash"></i> Trash
                       </button>
@@ -337,10 +353,10 @@
             </ng-container>
           </tbody>
         </table>
-        <hr/>
-          <div class="d-flex justify-content-center pagination-controls">
-            <pagination-controls (pageChange)="pageChanged($event)"></pagination-controls>
-          </div>
+        <hr />
+        <div class="d-flex justify-content-center pagination-controls">
+          <pagination-controls (pageChange)="pageChanged($event)"></pagination-controls>
+        </div>
       </ng-container>
     </section>
 
@@ -380,19 +396,22 @@
               <tr>
                 <td class="summary_text_level_3">
                   {{ report.category }}
-                  <button type="button" class="btn btn-info" ngbTooltip="{{ col?.infoText }}"
-                    tooltipClass="form-tooltip">
+                  <button
+                    type="button"
+                    class="btn btn-info"
+                    ngbTooltip="{{ col?.infoText }}"
+                    tooltipClass="form-tooltip"
+                  >
                     <i class="info-icon" aria-hidden="true"></i>
                     <span class="sr-only">Click here for more information</span>
                   </button>
                 </td>
-                <td class="summary_text_amt">{{ report.amount | currency:'USD':'symbol-narrow':'1.2-2' }}</td>
+                <td class="summary_text_amt">{{ report.amount | currency: 'USD':'symbol-narrow':'1.2-2' }}</td>
               </tr>
             </ng-container>
           </tbody>
         </table>
       </div>
-
     </section>
 
     <footer *ngIf="transactionType === 'ALLOC_H5_SUM_P'">
